@MappedSuperClass @Bilder AbstractEntity class delete / error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=8593
 
+
+data.source.driver-class-name= org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=19111993
+spring.datasource.url=jdbc:postgresql://localhost:5432/telegram
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+bot.token=6784895538:AAGwELKDIEXFJXMnjWxZ65FSDlLGgIZ7OH0
+bot.name=@vadimkhbot
+bot.url=
